<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/border_dark">

    <TextView style="@style/detailedlist_cellcaption"
        android:layout_weight="4"
        android:text="@string/component_title"/>
    <TextView style="@style/detailedlist_cellcaption_no_first"
        android:layout_weight="2"
        android:text="@string/count2"/>
    <TextView android:id="@+id/caption_unit"
        android:layout_weight="3"
        android:text="@string/volume1"
        style="@style/detailedlist_cellcaption_no_first"/>
    <TextView android:id="@+id/totallist_caption_cost"
		style="@style/detailedlist_cellcaption_no_first"
        android:layout_weight="3"
        android:text="@string/cost1"/>

</LinearLayout>
